Added entity class and refactored snake class